# ofx2csv

./: .gitignore  README.md  config.yml  config.yml.example  pyproject.toml
ofx2csv/: config.py  ofx2csv.py
tests/: test_config.py  test_ofx2csv.py
